Fix webkit display problem
This commit fixes the layout for Webkit based browsers. As it turns out
Webkit doesn't like nested flex-containers like this:

    <body style="display: flex">
        <header style="display: flex"
            ...
        </header>
        ...
    </body>

The inner <div> will get a zero height with overflowing content in
Webkit while Firefox enlarges the inner <div> according to its content.

The solution is quite simple, but requires some non-semantic markup:

    <body style="display: flex">
        <header>
            <div style="display: flex">
                ...
            </div>
        </header>
        ...
    </body>

--- a/src/app.less
+++ b/src/app.less
@@ -55,12 +55,15 @@ body {
  * Making the navbar more responsive
  */
 header.buzz-navbar {
+/*
     section {
         display: block;
     }
-
+*/
     @media (min-width: @size-md) {
-        display: flex;
+        .buzz-navbar-container {
+            display: flex;
+        }
 
         section  {
             flex-grow: 1;
